--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <link rel="stylesheet" href="css/bootstrap-3.3.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
