Added a link to the GoogleMaps <li> element

--- a/Demos/index.html
+++ b/Demos/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 	<ul>
-		<li>Google Maps Library</li>
+		<li><a href="./GoogleMaps/index.html">Google Maps Library</a></li>
 	</ul>
 </body>
