Removed search by coordinate functionality

--- a/Demos/GoogleMaps/index.html
+++ b/Demos/GoogleMaps/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h2>Google Maps Lookup</h2>
-    <p class="inline spaced">Latitude</p>
+ <!--    <p class="inline spaced">Latitude</p>
     <input class="spaced" type="text" id="lat" />
 
     <p class="inline spaced">Longitude</p>
@@ -22,7 +22,7 @@
     <br/>
     <input type="button" id="searchCoords" value="Search By Coords" />
     <br/>
-    <hr/>
+    <hr/> -->
 
     <p class="inline spaced">Address</p>
     <input class="spaced" type="text" id="address" />
