--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <!--Header-->
+    <h1>Cool Page Man!!!</h1>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div id="navbar-wrapper">
